<resources>
    <string name="app_name">Tip Time</string>
    <string name="round_up_tips">Round Up Tips?</string>
    <string name="ok_10">OK (10%)</string>
    <string name="tip_amount">Tip Amount:</string>
    <string name="tip_amount_num">Tip Amount: %s</string>
    <string name="good_16">GOOD (16%)</string>
    <string name="amazing_21">Amazing (21%)</string>
    <string name="calculate">Calculate</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="cost_of_service">cost of service</string>
</resources>